--- a/less/_utility.less
+++ b/less/_utility.less
@@ -35,3 +35,6 @@ body {-webkit-tap-highlight-color: rgb(255,255,158);}
 /* background color */
 .backgrey { background-color:#eee; }
 .backblue { background-color:#77d7f9; }
+
+
+.overhide { overflow:hidden}
