--- a/less/style.less
+++ b/less/style.less
@@ -11,7 +11,6 @@
 //grids variables
 @grids: 12; //# of grids, up to 16
 @gut: 2.6%; //gutter width
-@pad:0; //side paddings
 
 html {
                 /* flow-x, flow-y */
@@ -52,7 +51,7 @@ a {
 // =common element  = //
 // ================== */
 header {  }
-section { }
+section{ margin-bottom:80px;}
 footer {  }
 
 /* ================== //
