--- a/less/style.less
+++ b/less/style.less
@@ -2,6 +2,7 @@
 @import "_font";
 @import "_layout";
 @import "_formtable";
+@import "_nav";
 @import "_utility";
 @import "_mixin";
 @import "_modules";
