--- a/less/_formtable.less
+++ b/less/_formtable.less
@@ -1,6 +1,6 @@
 /* Form
 ---------------------------------------- */
-fieldset { padding: 1em; }
+fieldset {}
 legend { font-weight: bold; padding: 0 .25em; }
 
 input, textarea, select, button { font-family: inherit; font-size: 1em; }
@@ -91,11 +91,32 @@ form div.error { background:#fbe3e4; color:#8a1f11; padding:0.7em; margin-bottom
 
 /* Table
 ---------------------------------------- */
-table { border: 0; border-collapse: collapse; border-spacing: 0; line-height: 1.3; }
+
+table {
+    margin:5% auto 0;
+    color:@grey;
+        /* stripe */
+        tr:nth-child(odd) td {
+            background-color: #f6f6f6;
+        }
+        tr:hover td {
+            background-color: #f9f9f9;
+        }
+}
+
 caption, th, td { text-align: left; vertical-align: top; }
-th, td { border: 1px solid; padding: .5em 1em; }
-caption { padding-bottom: 1em; }
-th { font-weight: bold; }
+caption { padding-bottom: 1em; text-align:center; }
+ 
+th, td {padding:10px 28px; text-align:center; }
+th {padding-top:20px; text-shadow: 1px 1px 1px #fff; background:#e8eaeb; font-weight:bold;}
+th:first-child,td:first-child  { text-align:left; }
+tr { border-top:1px solid #e0e0e0; border-bottom:1px solid #e0e0e0; }
+
+table.grid {
+    border:1px solid #e0e0e0;
+    td {border-top:1px solid #e0e0e0; border-right:1px solid #e0e0e0;}
+    th:last-child,td:last-child  { border-right:0; }
+}
 
 dl {
     padding:10px;
@@ -109,90 +130,9 @@ dl.table {
     dd {padding-top:10px; float:left; }
 }
 
-table.stripe {
-    tr:nth-child(odd) td {
-        background-color: #f9f9f9;
-    }
-    tr:hover td {
-        background-color: #f5f5f5;
-    }
-}
-
-
 /* ========================= //
-// =   css3 form           = //
+// =   sexy form           = //
 // ========================= */
-
-.sexyform {  
-    form {
-        border: 1px solid #270644;
-        width: 250px;
-        margin:50px auto;
-        padding: 20px;
-        #border > .border-radius( 20px );
-        #shadow > .box-shadow ( 0, -5px, 60px, #270644 );
-        background:-moz-linear-gradient(19% 75% 90deg,#4E0085, #963AD6);
-        background:-webkit-gradient(linear, 0% 0%, 0% 100%, from(#963AD6), to(#4E0085));
-    }
-
-    label {
-        font-size: 12px;
-        font-family: arial, sans-serif;
-        list-style-type: none;
-        color: #fff;
-        text-shadow: #000 1px 1px;
-        margin-bottom: 10px;
-        font-weight: bold;
-        letter-spacing: 1px;
-        text-transform: uppercase;
-        display: block;
-    }
-
-    input {
-        -webkit-transition-property: -webkit-box-shadow, background;
-        -webkit-transition-duration: 0.25s;
-        padding: 6px;
-        border-bottom: 0px;
-        border-left: 0px;
-        border-right: 0px;
-        border-top: 1px solid #ad64e0;
-        -moz-box-shadow: 0px 0px 2px #000;
-        -webkit-box-shadow: 0px 0px 2px #000;
-        margin-bottom: 10px;
-        background: #8a33c6;
-        width: 230px;
-        &:hover {
-            -webkit-box-shadow: 0px 0px 4px #000;
-            background: #9d39e1;
-        }
-    }
-
-    input.submit {
-        -webkit-transition-property: -webkit-box-shadow, background;
-        -webkit-transition-duration: 0.25s;
-        width: 100px;
-        background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#963AD6), to(#781bb9));   
-        background:  -moz-linear-gradient(19% 75% 90deg,#781bb9, #963AD6);
-        color: #fff;
-        text-transform: uppercase;
-        text-shadow: #000 1px 1px;
-        border-top: 1px solid #ad64e0;
-        margin-top: 10px;
-
-        &:hover {
-            -webkit-box-shadow: 0px 0px 2px #000;
-            #shadow > .box-shadow ( 0, 0, 2p, #000 );
-            background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#963AD6), to(#781bb9));
-            background:  -moz-linear-gradient(19% 75% 90deg,#781bb9, #963AD6);
-        } 
-
-        &:active {
-            background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#781bb9), to(#963AD6));
-            background:  -moz-linear-gradient(19% 75% 90deg,#963AD6, #781bb9);
-        }
-
-    }
-}
 
 // ========================= //
 // =    button             = //
