--- a/less/_nav.less
+++ b/less/_nav.less
@@ -1,3 +1,4 @@
+/* ------------ pagination ------------ */
 .pagination {
     a { padding:5px; float:left; }
     a:hover, a.selected {
@@ -34,3 +35,14 @@
         color:#459be2;
     }
 }
+
+/* ------------ top/bot bar ------------ */
+.topbar, .botbar {
+    width:100%;
+    position:fixed;
+}
+
+.topbar { top:0; left:0; }
+.botbar { bottom:0; left:0; }
+
+.menu {  }
