add posr,posa,posf for position rel, abs, fixed

--- a/less/_utility.less
+++ b/less/_utility.less
@@ -25,6 +25,10 @@
     div, p, span { text-align:center; }
 }
 
+.posr { position: relative; }
+.posa { position: absolute; }
+.posf { position: fixed; }
+
 /* selections */
 ::selection 	 	{background: rgb(255,255,158);}
 ::-moz-selection 	{background: rgb(255,255,158);}
