--- a/less/_reset.less
+++ b/less/_reset.less
@@ -19,6 +19,7 @@ time, mark, audio, video {
     background:transparent;
     border:0;
     text-decoration:none;
+    .box-sizing;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
