fix topbar/botbar ul

--- a/less/_nav.less
+++ b/less/_nav.less
@@ -79,6 +79,8 @@
         min-width:100%;
         background:black;
         position:absolute;
+        padding-bottom:8px;
+        #border > .multi-radius(0, 0, 5px,5px);
     }
 }
 .botbar {
@@ -86,8 +88,10 @@
     ul {
         bottom:30px;
         min-width:100%;
+        padding-top:8px;
         background:white;
         position:absolute;
+        #border > .multi-radius(5px,5px,0, 0);
     }
 }
 
