--- a/css/style.css
+++ b/css/style.css
@@ -962,6 +962,16 @@ dl.table dd {
   min-width: 100%;
   background: black;
   position: absolute;
+  padding-bottom: 8px;
+  -webkit-border-top-left-radius: 0;
+  -webkit-border-top-right-radius: 0;
+  -webkit-border-bottom-right-radius: 5px;
+  -webkit-border-bottom-left-radius: 5px;
+  -moz-border-radius-topleft: 0;
+  -moz-border-radius-topright: 0;
+  -moz-border-radius-bottomright: 5px;
+  -moz-border-radius-bottomleft: 5px;
+  border-top-left-radius: 0;
 }
 .botbar {
   bottom: 0;
@@ -969,8 +979,18 @@ dl.table dd {
 .botbar ul {
   bottom: 30px;
   min-width: 100%;
+  padding-top: 8px;
   background: white;
   position: absolute;
+  -webkit-border-top-left-radius: 5px;
+  -webkit-border-top-right-radius: 5px;
+  -webkit-border-bottom-right-radius: 0;
+  -webkit-border-bottom-left-radius: 0;
+  -moz-border-radius-topleft: 5px;
+  -moz-border-radius-topright: 5px;
+  -moz-border-radius-bottomright: 0;
+  -moz-border-radius-bottomleft: 0;
+  border-top-left-radius: 5px;
 }
 .topbar.dark, .botbar.dark {
   background: #000000;
