--- a/less/_nav.less
+++ b/less/_nav.less
@@ -92,6 +92,7 @@
         background:white;
         position:absolute;
         #border > .multi-radius(5px,5px,0, 0);
+        #shadow > .box-shadow(0, 0, 10px, #eee);
     }
 }
 
