--- a/less/_nav.less
+++ b/less/_nav.less
@@ -1,3 +1,7 @@
+// pagination
+// topbar + botbar, dark + light
+
+
 /* ------------ pagination ------------ */
 .pagination {
     a { padding:5px; float:left; }
@@ -106,6 +110,9 @@
         color:white;
     }
     form input { background:#444; border:1px solid @black; }
+    input:focus {
+        background:@white;
+    }
 }
 
 .topbar.light, .botbar.light {
