[fix] small tag

--- a/css/style.css
+++ b/css/style.css
@@ -189,7 +189,7 @@ h1, .huge {
 }
 h1 small, .huge small {
   font-size: 0.5em;
-  margin-left: 5px;
+  line-height: normal;
 }
 h2, .large {
   font-size: 4em;
@@ -197,7 +197,7 @@ h2, .large {
 }
 h2 small, .large small {
   font-size: 0.5em;
-  margin-left: 5px;
+  line-height: normal;
 }
 h3, .bigger {
   font-size: 3em;
@@ -205,7 +205,7 @@ h3, .bigger {
 }
 h3 small, .bigger small {
   font-size: 0.6em;
-  margin-left: 5px;
+  line-height: normal;
 }
 h4, .big {
   font-size: 2em;
@@ -213,7 +213,7 @@ h4, .big {
 }
 h4 small, .big small {
   font-size: 0.6em;
-  margin-left: 5px;
+  line-height: normal;
 }
 h5, .strong, strong {
   font-size: 1.2em;
@@ -221,21 +221,15 @@ h5, .strong, strong {
 }
 h5 small, .strong small, strong small {
   font-size: 0.6em;
-  margin-left: 5px;
+  line-height: normal;
 }
-h6,
-.small,
-small,
-p {
+h6, .small, p {
   font-size: 1em;
   line-height: 1.2857142857142858em;
 }
-h6 small,
-.small small,
-small small,
-p small {
+h6 small, .small small, p small {
   font-size: 0.6em;
-  margin-left: 5px;
+  line-height: normal;
 }
 .tiny {
   font-size: 0.9em;
@@ -243,7 +237,7 @@ p small {
 }
 .tiny small {
   font-size: 0.6em;
-  margin-left: 5px;
+  line-height: normal;
 }
 p {
   word-wrap: break-word;
