--- a/less/_font.less
+++ b/less/_font.less
@@ -8,13 +8,13 @@ body { line-height: @line; font-size:   @bodyfont; font-family: @fontfamily; }
 h1,h2,h3,h4,h5,h6,strong { font-weight: bold; }
 
 .gigantic           { @font:20em;  font-size:@font; line-height: @line/@font*15;  }
-h1, .huge           { @font:5em;   font-size:@font; line-height: @line/@font*4;   small { font-size:0.5em; margin-left:5px}}
-h2, .large          { @font:4em;   font-size:@font; line-height: @line/@font*3;   small { font-size:0.5em; margin-left:5px}}
-h3, .bigger         { @font:3em;   font-size:@font; line-height: @line/@font*2;   small { font-size:0.6em; margin-left:5px}}
-h4, .big            { @font:2em;   font-size:@font; line-height: @line/@font*1.5; small { font-size:0.6em; margin-left:5px}}
-h5, .strong, strong { @font:1.2em; font-size:@font; line-height: @line/@font/4;   small { font-size:0.6em; margin-left:5px}}
-h6, .small, small,p { @font:1em;   font-size:@font; line-height: @line/@font;     small { font-size:0.6em; margin-left:5px}}
-.tiny               { @font:0.9em; font-size:@font; padding:@line/(@font*5) 0;    small { font-size:0.6em; margin-left:5px}}
+h1, .huge           { @font:5em;   font-size:@font; line-height: @line/@font*4;   small { font-size:0.5em; line-height:normal;}}
+h2, .large          { @font:4em;   font-size:@font; line-height: @line/@font*3;   small { font-size:0.5em; line-height:normal;}}
+h3, .bigger         { @font:3em;   font-size:@font; line-height: @line/@font*2;   small { font-size:0.6em; line-height:normal;}}
+h4, .big            { @font:2em;   font-size:@font; line-height: @line/@font*1.5; small { font-size:0.6em; line-height:normal;}}
+h5, .strong, strong { @font:1.2em; font-size:@font; line-height: @line/@font/4;   small { font-size:0.6em; line-height:normal;}}
+h6, .small, p       { @font:1em;   font-size:@font; line-height: @line/@font;     small { font-size:0.6em; line-height:normal;}}
+.tiny               { @font:0.9em; font-size:@font; padding:@line/(@font*5) 0;    small { font-size:0.6em; line-height:normal;}}
 
 p {word-wrap:break-word;}
 i, em {font-style: italic;}
@@ -25,9 +25,7 @@ h1, h2, h3, h4, h5, h6,
 p, ul, ol, pre, blockquote,
 textarea, button, .gigantic,
 .huge,.large,.bigger,.big,
-.strong,.small {
-    margin: 5px 0 15px;
-}
+.strong,.small { margin: 5px 0 15px; }
 
 
 /* ================== //
