--- a/css/style.css
+++ b/css/style.css
@@ -823,9 +823,126 @@ dl.table dd {
   padding-top: 10px;
   float: left;
 }
-/* ========================= //
-// =   sexy form           = //
-// ========================= */
+/* buttons
+---------------------------------------- */
+button {
+  padding: 9px 20px;
+  background: #ffffff;
+  border: 1px solid #eee;
+  -webkit-background-clip: padding-box;
+  -webkit-border-radius: 5px;
+  -moz-background-clip: padding-box;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  background-clip: padding-box;
+  -webkit-box-shadow: 1px 1px 5px #eeeeee;
+  -moz-box-shadow: 1px 1px 5px #eeeeee;
+  box-shadow: 1px 1px 5px #eeeeee;
+  text-shadow: 1px 0px 1px #888888;
+}
+/* shapes */
+button.pill {
+  -webkit-background-clip: padding-box;
+  -webkit-border-radius: 30px;
+  -moz-background-clip: padding-box;
+  -moz-border-radius: 30px;
+  border-radius: 30px;
+  background-clip: padding-box;
+}
+button.strong {
+  height: 35px;
+  min-height: 35px;
+  max-height: 35px;
+  padding: 5px 10px;
+}
+button.small {
+  height: 25px;
+  min-height: 25px;
+  max-height: 25px;
+  padding: 3px 6px;
+}
+/* colours */
+button.blue,
+button.green,
+button.yellow,
+button.pink,
+button.orange,
+button.red,
+button.sky,
+button.lime,
+button.primary {
+  color: white;
+}
+button.blue {
+  background-color: #08b5fb;
+  border: 1px solid #04a5e6;
+}
+button.green {
+  background-color: #46a546;
+  border: 1px solid #3e933e;
+}
+button.yellow {
+  background-color: #ffc40d;
+  border: 1px solid #f3b700;
+}
+button.pink {
+  background-color: #c3325f;
+  border: 1px solid #af2d55;
+}
+button.orange {
+  background-color: #fbb450;
+  border: 1px solid #df8505;
+}
+button.red {
+  background-color: #d83a2e;
+  border: 1px solid #9d261d;
+}
+/* gradient */
+button.sky {
+  background: #34d8ec;
+  background-image: -moz-linear-gradient(top, #36e0f5, #30c8da 95%, #32cfe2);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#36e0f5), color-stop(0.95, #30c8da), to(#32cfe2));
+  background-image: -webkit-linear-gradient(top, from(#36e0f5), color-stop(0.95, #30c8da), to(#32cfe2));
+  background-image: -o-linear-gradient(top, #36e0f5 0%, #30c8da 95%, #32cfe2 100%);
+  filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#36e0f5, endColorstr=#32cfe2)";
+  -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#36e0f5, endColorstr=#32cfe2)";
+  background-image: linear-gradient(top, #36e0f5 0%, #30c8da 95%, #32cfe2 100%);
+  border: 1px solid #4ee4f6;
+  -webkit-box-shadow: 0px 0px 14px #36e0f5;
+  -moz-box-shadow: 0px 0px 14px #36e0f5;
+  box-shadow: 0px 0px 14px #36e0f5;
+  text-shadow: none;
+}
+button.lime {
+  background: #83ee20;
+  background-image: -moz-linear-gradient(top, #86f521, #79dc1e 95%, #7fe71f);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#86f521), color-stop(0.95, #79dc1e), to(#7fe71f));
+  background-image: -webkit-linear-gradient(top, from(#86f521), color-stop(0.95, #79dc1e), to(#7fe71f));
+  background-image: -o-linear-gradient(top, #86f521 0%, #79dc1e 95%, #7fe71f 100%);
+  filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#86f521, endColorstr=#7fe71f)";
+  -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#86f521, endColorstr=#7fe71f)";
+  background-image: linear-gradient(top, #86f521 0%, #79dc1e 95%, #7fe71f 100%);
+  border: 1px solid #93f639;
+  -webkit-box-shadow: 0px 0px 14px #86f521;
+  -moz-box-shadow: 0px 0px 14px #86f521;
+  box-shadow: 0px 0px 14px #86f521;
+  text-shadow: none;
+}
+button.primary {
+  background: #0280d4;
+  background-image: -moz-linear-gradient(top, #049cdb, #0064cd);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#049cdb), to(#0064cd));
+  background-image: -webkit-linear-gradient(top, #049cdb, #0064cd);
+  background-image: -o-linear-gradient(top, #049cdb, #0064cd);
+  background-image: linear-gradient(top, #049cdb, #0064cd);
+  filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#049cdb, endColorstr=#0064cd)";
+  -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#049cdb, endColorstr=#0064cd)";
+  background-image: -ms-linear-gradient(top, #0064cd, #0064cd);
+  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+}
+button.primary:hover {
+  color: #049cdb;
+}
 /* ------------ pagination ------------ */
 .pagination a {
   padding: 5px;
